test/httpbin/httproute-public/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: httpbin

resources:
- httproute.yaml
- ../../../ingress/manual-certificates/domain-info/

replacements:
- source:
    kind: ConfigMap
    name: main-domain-info
    fieldPath: data.domain_suffix
  targets:
  - select:
      kind: HTTPRoute
      name: httpbin
    options:
      delimiter: .
      index: 1
    fieldPaths:
    - spec.hostnames.0
